# Tasks-cli

./: .geminiignore  .gitignore  404.html  LICENSE  README.md  data_dev2.db  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  tasks-cli.kdl  tasks-cli.spec
.makemd/: fileCache.mdc  superstate.mdc
.obsidian/: app.json  appearance.json  appearance.sync-conflict-20250324-001732-756VSWP.json  appearance.sync-conflict-20250408-234343-CWUXKPG.json  appearance.sync-conflict-20250628-212907-CWUXKPG.json  bookmarks.json  community-plugins.json  community-plugins.sync-conflict-20250408-234344-CWUXKPG.json  community-plugins.sync-conflict-20250628-212923-CWUXKPG.json  core-plugins-migration.json  core-plugins.json  core-plugins.sync-conflict-20250628-212933-CWUXKPG.json  graph.json  hotkeys.json  types.json  workspace-mobile.json  workspace.json
.obsidian/snippets/: guscode.css
arquitectura/: index.html
config/: config_loader.py  settings.toml  styles.css
controllers/: db_tareas.py  decorators.py  dinamic_colors.py  interface.py  resources.py  screens.py  styles.css
docs/: arquitectura.md  guia_desarrollo.md  guia_usuario.md  index.md
docs/stylesheets/: extra.css
guia_desarrollo/: index.html
guia_usuario/: index.html
models/: model_task.py
repositories/: connection_manager.py  database.py  querys.py  repository_db.py
search/: search_index.json
services/: task_service.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/arquitectura/: index.html
site/search/: search_index.json
stylesheets/: extra.css
tests/models_tests/: model_task_test.py  test_model_task.py
(+43 files in other folders)
